--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             </div>
         </div>
 
-        <a href="firstversion.html">Erste Version</a>
+        <a href="firstversion.html">Neue Version</a>
     </div>
 </body>
 </html>
