--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <title>Pokedex</title>
 
     <script>
-
         let charmander;
         let pikachu;
         let venusaur;
+        let pokemons;
 
         /**
          * loading data from API
         */
-         async function loadPokemon() {
+         async function loadPokemons() {
             let charmanderURL = 'https://pokeapi.co/api/v2/pokemon/charmander';
             let charmanderResponse = await fetch(charmanderURL);
             charmander = await charmanderResponse.json();
@@ -34,26 +34,62 @@
             let venusaurResponse = await fetch(venusaurURL);
             venusaur = await venusaurResponse.json();
 
+            fillingPokemons();
             showPokemonInfo();
         }
 
 
         /**
+         * selected Infos from API
+        */
+        function fillingPokemons() {
+            pokemons = [
+                {
+                    url: 'https://pokeapi.co/api/v2/pokemon/charmander',
+                    name: charmander['name'],
+                    pic: charmander['sprites']['front_default'],
+                    height: '0,60m',
+                    weight: '8,5kg',
+                    abilities: 'Blaze, Solar-Power',
+                    cathegory: 'lizard-Pokémon'
+                },
+                {
+                    url: 'https://pokeapi.co/api/v2/pokemon/pikachu',
+                    name: pikachu['name'],
+                    pic: pikachu['sprites']['front_default'],
+                    height: '0,40m',
+                    weight: '6,0kg',
+                    abilities: 'statics, lightning rod',
+                    cathegory: 'mouse-Pokémon'
+                },
+                {
+                    url: 'https://pokeapi.co/api/v2/pokemon/venusaur',
+                    name: venusaur['name'],
+                    pic: venusaur['sprites']['front_default'],
+                    height: '2,4m',
+                    weight: '155,5kg',
+                    abilities: 'Chlorophyll, greasy, emergency-fertilizer',
+                    cathegory: 'seeds-Pokémon'
+                }
+            ];
+       }
+
+        /**
          * showing the Pokemon overview
         */
         function showPokemonInfo() {
-          document.getElementById('charmander').innerHTML = charmander['name'];
-          document.getElementById('charmanderPic').src = charmander['sprites']['front_default'];
+            for (let index = 0; index < pokemons.length; index++) {
+                const currentPokemon = pokemons[index];
 
-          document.getElementById('pikachu').innerHTML = pikachu['name'];
-          document.getElementById('pikachuPic').src = pikachu['sprites']['front_default'];
-
-          document.getElementById('venusaur').innerHTML = venusaur['name'];
-          document.getElementById('venusaurPic').src = venusaur['sprites']['front_default'];
+                document.getElementById('pokedexArea').innerHTML += `<div class="pokedex" onclick="showOverlay()">
+                <h1 id="pokemonName">${currentPokemon['name']}</h1>
+                <img id="pokemonPic" src="${currentPokemon['pic']}">
+                </div>
+                `;
+            }
         }
 
-
-        /**
+         /**
          * Open Overlay with current Pokemondata
         */
        function showOverlay() {
@@ -65,10 +101,6 @@
     <style>
         body {
             margin: 0;
-        }
-
-        .d-none {
-            display: none;
         }
 
         .overall {
@@ -99,12 +131,10 @@
             margin: 20px;
             width: 200px;
             height: 150px;
-            transition: all ease-in-out 225ms;
         }
 
         .pokedex:hover {
             opacity: 1;
-            transform: rotate(2deg);
         }
 
         .header {
@@ -151,49 +181,20 @@
             width: 100vh;
             height: 100vh;
             z-index: 1;
-        }
-
-        .pokeCard {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            width: 80vh;
-            height: 80vh;
-            background-color: rgb(190,138,18);
+            background-color: black;
         }
     </style>
 </head>
-<body onload="loadPokemon()">
-    <div id="overlay" class="d-none">
-        <div class="pokeCard" id="pokeCard"></div>
-    </div>
+    <body onload="loadPokemons()">
+        <div class="d-none" id="overlay"></div>
+        <div class="overall">
+            <h1 class="header">Pokedex</h1>
 
-    <div class="overall">
-        <h1 class="header">Pokedex</h1>
+            <img src="img/ball.svg" class="logo">
 
-        <img src="img/ball.svg" class="logo">
+            <h2>Overview</h2>
 
-        <h2>Overview</h2>
-
-        <div id="pokedexArea">
-            <div class="pokedex" onclick="showOverlay()">
-                <h1 id="charmander"></h1>
-                <img id="charmanderPic">
-            </div>
-
-            <div class="pokedex" onclick="showOverlay()">
-                <h1 id="pikachu"></h1>
-                <img id="pikachuPic">
-            </div>
-
-            <div class="pokedex" onclick="showOverlay()">
-                <h1 id="venusaur"></h1>
-                <img id="venusaurPic">
-            </div>
+            <div id="pokedexArea"></div>
         </div>
-
-        <a href="firstversion.html">Neue Version</a>
-    </div>
-</body>
+    </body>
 </html>
