--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Londrina+Outline&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -12,279 +13,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Delius+Unicase&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
 
     <title>Pokedex</title>
 
-    <script>
-        let charmander;
-        let pikachu;
-        let venusaur;
-        let pokemons;
+    <link rel="stylesheet" href="style.css">
 
-        /**
-         * loading data from API
-        */
-         async function loadPokemons() {
-            let charmanderURL = 'https://pokeapi.co/api/v2/pokemon/charmander';
-            let charmanderResponse = await fetch(charmanderURL);
-            charmander = await charmanderResponse.json();
-
-            let pikachuURL = 'https://pokeapi.co/api/v2/pokemon/pikachu';
-            let pikachuResponse = await fetch(pikachuURL);
-            pikachu = await pikachuResponse.json();
-
-            let venusaurURL = 'https://pokeapi.co/api/v2/pokemon/venusaur';
-            let venusaurResponse = await fetch(venusaurURL);
-            venusaur = await venusaurResponse.json();
-
-            fillingPokemons();
-            showPokemonInfo();
-        }
-
-
-        /**
-         * selected Infos from API
-        */
-        function fillingPokemons() {
-            pokemons = [
-                {
-                    url: 'https://pokeapi.co/api/v2/pokemon/charmander',
-                    name: charmander['name'],
-                    pic: charmander['sprites']['front_default'],
-                    height: '0,60m',
-                    weight: '8,5kg',
-                    abilities: 'Blaze, Solar-Power',
-                    cathegory: 'lizard-Pokémon'
-                },
-                {
-                    url: 'https://pokeapi.co/api/v2/pokemon/pikachu',
-                    name: pikachu['name'],
-                    pic: pikachu['sprites']['front_default'],
-                    height: '0,40m',
-                    weight: '6,0kg',
-                    abilities: 'statics, lightning rod',
-                    cathegory: 'mouse-Pokémon'
-                },
-                {
-                    url: 'https://pokeapi.co/api/v2/pokemon/venusaur',
-                    name: venusaur['name'],
-                    pic: venusaur['sprites']['front_default'],
-                    height: '2,4m',
-                    weight: '155,5kg',
-                    abilities: 'Chlorophyll, greasy, emergency-fertilizer',
-                    cathegory: 'seeds-Pokémon'
-                }
-            ];
-       }
-
-        /**
-         * showing the Pokemon overview
-        */
-        function showPokemonInfo() {
-            for (let index = 0; index < pokemons.length; index++) {
-                const currentPokemon = pokemons[index];
-
-                document.getElementById('pokedexArea').innerHTML += `<div class="pokedex" onclick="showOverlay(${index})">
-                <h1 id="pokemonName">${currentPokemon['name']}</h1>
-                <img id="pokemonPic" src="${currentPokemon['pic']}">
-                </div>
-                `;
-            }
-        }
-
-         /**
-         * Open Overlay with current Pokemondata
-        */
-       function showOverlay(index) {
-           document.getElementById('overlay').classList.remove('d-none');
-           document.getElementById('overlay').classList.add('overlay');
-           document.getElementById('overlayContent').classList.remove('d-none');
-           document.getElementById('overlayContent').classList.add('overlay-content');
-           
-           document.getElementById('overlayContent').innerHTML = `
-            <div class="pokecard" id="pokecard">
-                <img src="img/ball.svg" class="logocard">
-                <h1>${pokemons[index]['name']}</h1>
-                <img src="img/line.png" class="line">
-                <img src="${pokemons[index]['pic']}" class="pokemon-pic">
-
-                <img src="img/waage.svg" class="minilogos"><p>Height:</p><h3>${pokemons[index]['height']}</h2>
-                <img src="img/maßband.svg" class="minilogos"><p>Weight:</p> <h3>${pokemons[index]['weight']}</h2>
-                <img src="img/muckis.svg" class="minilogos"><p>Abilities:</p> <h3>${pokemons[index]['abilities']}</h2>
-                <img src="img/typ.svg" class="minilogos"><p>Cathegory:</p> <h3>${pokemons[index]['cathegory']}</h2>
-
-                <img src="img/X.svg" class="X" onclick="closeOverlay()">
-            </div>
-           `;
-       }
-
-
-       /**
-        * closing overlay with Pokemondata
-       */
-       function closeOverlay() {
-            document.getElementById('overlay').classList.add('d-none');
-            document.getElementById('overlay').classList.remove('overlay');
-            document.getElementById('overlayContent').classList.add('d-none');
-            document.getElementById('overlayContent').classList.remove('overlay-content');
-            document.getElementById('pokecard').classList.remove('pokecard');
-            document.getElementById('pokecard').classList.add('d-none');
-       }
-    </script>
-
-    <style>
-        body {
-            margin: 0;
-        }
-
-        .overall {
-            background-image: url(img/bg2.jpeg);
-            background-size: cover;
-            height: 100vh;
-            align-items: center;
-            display: flex;
-            flex-direction: column;
-        }
-
-        #pokedexArea {
-            display: flex;
-            justify-content: center;
-            margin: 20px;
-        }
-
-        .pokedex {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            background-color: rgb(88,51,37);
-            opacity: 0.8;
-            padding: 15px;
-            color: rgb(255,208,129);
-            cursor: pointer;
-            margin: 20px;
-            width: 200px;
-            height: 150px;
-        }
-
-        .pokedex:hover {
-            opacity: 1;
-        }
-
-        .header {
-            font-family: 'Londrina Outline', cursive;
-            font-size: 90px;
-            animation: textshadow 8s infinite alternate; 
-            margin-bottom: 120px;
-        }
-
-        @keyframes textshadow {
-            0%   { text-shadow: 1px 1px 0px rgb(20,15,12) }
-            10%   { text-shadow: 3px 3px 2px rgb(20,15,12) }
-            20%  { text-shadow: 9px 10px 6px rgb(170,102,34) }
-            40%  { text-shadow: 10px 15px 6px rgb(51,38,39)}
-            60%  { text-shadow: 0px 10px 4px rgb(51,38,39)}
-            80%  { text-shadow: -10px 8px 3px rgb(51,38,39)}
-            100%  { text-shadow: 1px 5px 1px rgb(51,38,39) }
-        }
-
-        h1 {
-            font-family: 'Kranky', cursive;
-            text-shadow: 2px 2px rgb(20, 15, 15);
-            margin-bottom: -5px;
-        }
-
-        h2 {
-            font-family: 'Delius Unicase', cursive;
-            color: rgb(190,138,18);
-            margin-bottom: 40px;
-            text-shadow: 2px 2px rgb(51,38,39);
-        }
-
-        .logocard {
-            width: 50px;
-            height: 50px;
-            margin-left: 46%;
-        }
-
-        .logo {
-            width: 50px;
-            height: 50px;
-        }
-
-        .overlay {
-            display: flex;
-            position: fixed;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            width: 100%;
-            height: 100%;
-            z-index: 1;
-            background-color: rgb(51,38,39);
-            opacity: 0.9;
-        }
-
-        .overlay-content {
-            display: flex;
-            background-color: white;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            min-width: 750px;
-            min-height: 550px;
-            padding: 10px;
-            border-radius: 10px;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .line {
-            width: 70vh;
-        }
-
-        .pokecard {
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-        }
-
-        .pokemon-pic {
-            width: 150px;
-            height: 150px;
-            margin-left: 36%;
-            margin-top: -29px;
-            margin-bottom: -15px;
-        }
-
-        .X {
-            height: 35px;
-            cursor: pointer;
-            transition: all ease-in-out 225ms;
-            margin-top: 40px;
-        }
-
-        .X:hover {
-            transform: scale(1.1);
-        }
-
-        p {
-            font-family: 'Maven Pro', sans-serif;
-            font-size: 20px;
-            line-height: 0.1;
-        }
-
-        h3 {
-            line-height: 0.1;
-        }
-
-        .minilogos {
-            width: 25px;
-            margin-left: 47%;
-            margin-bottom: -10px;
-        }
-    </style>
+    <script src="script.js"></script>
 </head>
     <body onload="loadPokemons()">
 
